week 4 과제 구현